--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@200;300;400;500;600;700;800;900&family=Varela&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel='stylesheet' href='https://unpkg.com/aos@2.3.0/dist/aos.css'>
+    <link rel="stylesheet" href="font-awesome-all.css">
 </head>
 
 <body>
@@ -61,23 +62,23 @@
         <div class="intro_content">
             <div class="intro_content__container">
                 <p class="intro_content__container__text">
-                    I<span id="spin"></span>
+                    I&nbsp;&nbsp; AM <span id="spin"></span>
                 </p>
             </div>
         </div>
         <div class="get-in-touch">
             <a class="get-in-touch-btn" href="#"> Get in touch</a>
         </div>
-        <img class="ayush_img" src="images/ayush.png" data-aos="flip-left">
+        <img class="ayush_img" src="images/ayush.png">
     </div>
 
-    <div class="container" style="height: 500px;background-color:#faf9f7; ">
+    <div class="container" style="height: 500px;background-color:#e6e2dc; ">
         <div class="line-outer" data-aos="fade-up">
             <div class="line-inner" style="top: 60%;"></div>
         </div>
         <p style="text-align: center;
            font-size: 1.5em;" data-aos="fade-up">
-            "Appretiate the struggles as opportunities to wake up"
+            "Appreciate the struggles as opportunities to wake up"
             <br>
             - Jeff Bridges
         </p>
@@ -87,7 +88,7 @@
     </div>
     <div class="container">
         <div class="container-title" data-aos="fade-up">
-            Technical Skills
+            Skills
             <hr class="soften" />
         </div>
         <div class="skills">
@@ -107,100 +108,218 @@
                 <li data-aos="flip-left">JSON</li>
                 <li data-aos="flip-left">Node.js</li>
                 <li data-aos="flip-left">Git</li>
+                <li data-aos="flip-left">GitHub</li>
                 <li data-aos="flip-left">Matlab</li>
                 <li data-aos="flip-left">Bootstrap</li>
+                <li data-aos="flip-left">Materialize CSS</li>
                 <li data-aos="flip-left">Illustrator</li>
                 <li data-aos="flip-left">Photoshop</li>
                 <li data-aos="flip-left">Indesign</li>
+                <li data-aos="flip-left">Hyper-Realism Sketch</li>
+                <li data-aos="flip-left">Painting</li>
+                <li data-aos="flip-left">Illustration</li>
             </ul>
         </div>
     </div>
-    <div class="container" style="background-color:#faf9f7;">
+    <div class="container" style="background-color:#e6e2dc;">
         <div class="container-title" data-aos="fade-up">
             What I Do
             <hr class="soften" />
         </div>
-        <div class="circle" data-aos="fade-left">
-            <div class="circle__inner">
-                <div class="circle__wrapper">
-                    <div class="circle__content">Code</div>
+        <div class="circle-container" data-aos="fade-left">
+            <div class="circle">
+                <div class="circle__inner">
+                    <div class="circle__wrapper">
+                        <div class="circle__content">Web Dev</div>
+                    </div>
+                </div>
+            </div>
+            <div class="circle">
+                <div class="circle__inner">
+                    <div class="circle__wrapper">
+                        <div class="circle__content">UI/UX</div>
+                    </div>
+                </div>
+            </div>
+            <div class="circle">
+                <div class="circle__inner">
+                    <div class="circle__wrapper">
+                        <div class="circle__content">App Dev</div>
+                    </div>
+                </div>
+            </div>
+            <div class="circle">
+                <div class="circle__inner">
+                    <div class="circle__wrapper">
+                        <div class="circle__content">Software Dev</div>
+                    </div>
+                </div>
+            </div>
+            <div class="circle">
+                <div class="circle__inner">
+                    <div class="circle__wrapper">
+                        <div class="circle__content">Realism Sketch</div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="circle" data-aos="fade-left">
-            <div class="circle__inner">
-                <div class="circle__wrapper">
-                    <div class="circle__content">Design</div>
-                </div>
-            </div>
-        </div>
-        <div class="circle" data-aos="fade-left">
-            <div class="circle__inner">
-                <div class="circle__wrapper">
-                    <div class="circle__content">Draw</div>
-                </div>
-            </div>
+        <div class="content" data-aos="fade-up">
+            Have been passionate about web development since my early days now a enthusiast in same with knowledge in Javascript, jQuery and React.js. Also into backend developing, with python, C++ and Java, along with a really good understanding of database. I am also a Realism Artist who invests some time of the day with pencils and paper along with being a part of an art club with the finest group of artists in town. Aiming in owning an Art gallery someday in life.<br>
+            Apart from this, I do a bit of everything, from UI/UX design, App Dev, Software Dev to digital art.
         </div>
     </div>
     <div class="container" data-aos="fade-up">
-        <h1>Page Title3</h1>
-        <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-            Why do we use it?
+        <div class="container-title" data-aos="fade-up">
+            My Previous Works
+            <hr class="soften" />
+        </div>
+        <div class="items-container more-width" style="height: 720px;">
+            <div class="item no-bg more-width" data-aos="fade-up">
+                <div class="item-img rounded">
+                    <img src="images/Nepali_corpus2.png">
+                </div>
+                <div class="item-des des-width">
+                    <div class="desc-title">
+                        "Nepali Language<br> Corpus & POS Tagger"
+                    </div>
+                    <br><br>Language Corpus and POS tagger developed for Nepali Language that gives the corpus data from the self-generated corpus & tags the POS for words & sentences.
+                    <br><br><i>Languages: Python, Nltk, Electron.js</i>
+                </div>
+            </div>
 
+            <div class="item no-bg" data-aos="fade-up">
 
-        </p>
+                <div class="item-des des-width">
+                    <div class="desc-title">
+                        "Hand Gesture based Captcha Recognition System"
+                    </div>
+                    <br><br>A more secure Captcha Recognition System using Hand gestures for more secure environment where security is major concern.
+                    <br><br><i>Languages: Python, OpenCV, CNN</i>
+                </div>
+                <div class="item-img rounded">
+                    <img src="images/Hand_gesture_captcha.png" width="500px;">
+                </div>
+            </div>
+        </div>
+        <div class="get-in-touch-2" data-aos="fade-up">
+            <a class="get-in-touch-2-btn" href="#"> See more...</a>
+        </div>
+    </div>
+    <div class="container" data-aos="fade-up" style="background-color: #e6e2dc;width: 80%;margin:60px auto; border-radius: 30px">
+        <div class="container-title" data-aos="fade-up">
+            Lets create something Amazing Together
+            <hr class="soften" />
+        </div>
+        <div class="content" data-aos="fade-up">
+            Have some work for me? UI Design? Need a Website? Or a Sketch? Feel free to contact me for anything.
+
+        </div>
+        <div class="get-in-touch-2" data-aos="fade-up">
+            <a class="get-in-touch-2-btn" href="#"> Get in touch</a>
+        </div>
     </div>
     <div class="container" data-aos="fade-up">
-        <h1>Page Title4</h1>
-        <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-            Why do we use it?
+        <div class="container-title full-width" data-aos="fade-up">
+            Arts by Ayush
+        </div>
+        <div class="items-container">
+            <div class="item" data-aos="fade-up">
+                <div class="item-img">
+                    <img src="images/Hands.jpg">
+                </div>
+                <div class="item-des" style="text-align: left;">
+                    <div class="desc-title" style="text-align: center;">
+                        "Forever Love"
+                    </div>
+                    <br>Together shall we live<br>
+                    walking hands in hands<br>
+                    through the storm and wind<br>
+                    and across all hurdles<br>
+                    shall we pass, with a smile<br>
+                    falling in love every day<br>
+                    as the petals fall.<br>
+                </div>
+            </div>
 
-            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-
-
-        </p>
+            <div class="item" data-aos="fade-up">
+                <div class="item-img">
+                    <img src="images/Goku%20Digital%20Art.jpg">
+                </div>
+                <div class="item-des">
+                    <div class="desc-title">
+                        "Goku - Digital Art"
+                    </div>
+                    <br>This is description.
+                </div>
+            </div>
+        </div>
+        <div class="get-in-touch-2" data-aos="fade-up">
+            <a class="get-in-touch-2-btn" href="#">See More...</a>
+        </div>
     </div>
+    <div class="container footer" data-aos="fade-up" style="background-color: rgb(18, 22, 72); color: #fff;height: 400px;">
+        <div class="container-title" data-aos="fade-up" style="color: #fff;">
+            LET ME CREATE WHAT YOU NEED.
+            <hr class="soften white" />
+        </div>
+        <div class="footer-menu" data-aos="fade-up">
+            <ul class="footer-list">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Resume</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Artworks</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <div class="content" data-aos="fade-up" style="margin-top: 20px;font-size: 0.8em; ">
+            © 2020 Ayush Karn. All rights reserved.
+        </div>
+        <div class="social_media" data-aos="fade-up">
+            <a href="https://www.github.com/ayush2599"><i class="fab fa-github m-3"></i></a>
+            <a href="https://www.linkedin/ayush-karn25"><i class="fab fa-linkedin m-3"></i></a>
+            <a href="https://www.instagram.com/ayush_diaries"><i class="fab fa-instagram m-3"></i></a>
+            <a href="https://www.facebook.com/ayush.karn25"><i class="fab fa-facebook m-3"></i></a>
+            <a href="https://www.twitter.com/ayush_karn25"><i class="fab fa-twitter m-3"></i></a>
+        </div>
+    </div>
+</body>
+<script>
+    const navSlide = () => {
+        const menu = document.querySelector('.menu');
+        const nav = document.querySelector('.menu-list');
+        const menuList = document.querySelectorAll('.menu-list li');
 
-    <script>
-        const navSlide = () => {
-            const menu = document.querySelector('.menu');
-            const nav = document.querySelector('.menu-list');
-            const menuList = document.querySelectorAll('.menu-list li');
+        menu.addEventListener('click', () => {
+            nav.classList.toggle('nav-active');
 
-            menu.addEventListener('click', () => {
-                nav.classList.toggle('nav-active');
-
-                menuList.forEach((link, index) => {
-                    if (link.style.animation) {
-                        link.style.animation = '';
-                    } else {
-                        link.style.animation = `navReveal 0.5s ease forwards ${index / 7 + 0.5}s`;
-                    }
-                });
-                menu.classList.toggle('toggle');
-            });
-        }
-
-        navSlide();
-
-        $(function() {
-            var header = $("#mynav");
-            $(window).scroll(function() {
-                var scroll = $(window).scrollTop();
-
-                if (scroll >= 200) {
-                    header.removeClass('nav').addClass('nav2');
+            menuList.forEach((link, index) => {
+                if (link.style.animation) {
+                    link.style.animation = '';
                 } else {
-                    header.removeClass('nav2').addClass('nav');
+                    link.style.animation = `navReveal 0.5s ease forwards ${index / 7 + 0.5}s`;
                 }
             });
+            menu.classList.toggle('toggle');
         });
+    }
 
-    </script>
+    navSlide();
 
-</body>
+    $(function() {
+        var header = $("#mynav");
+        $(window).scroll(function() {
+            var scroll = $(window).scrollTop();
+
+            if (scroll >= 200) {
+                header.removeClass('nav').addClass('nav2');
+            } else {
+                header.removeClass('nav2').addClass('nav');
+            }
+        });
+    });
+</script>
+
+
 
 <script>
     const navSlide = () => {
@@ -247,7 +366,6 @@
     const composeN = (...fns) => (...args) =>
         fns.reverse().
     reduce((x, f) => f.apply(f, [].concat(x)), args);
-
 </script>
 
 <script>
@@ -298,14 +416,13 @@
 <script src='https://code.jquery.com/jquery-1.11.2.min.js'></script>
 <script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
 <script src='https://unpkg.com/aos@2.3.0/dist/aos.js'></script>
+
 <script id="rendered-js">
     AOS.init({
         duration: 1200
     });
 
 </script>
-</script>
 <script src="https://static.codepen.io/assets/editor/iframe/iframeRefreshCSS-e03f509ba0a671350b4b363ff105b2eb009850f34a2b4deaadaa63ed5d970b37.js"></script>
-</body>
 
 </html>
