--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@200;300;400;500;600;700;800;900&family=Varela&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel='stylesheet' href='https://unpkg.com/aos@2.3.0/dist/aos.css'>
-    <link rel="stylesheet" href="font-awesome-all.css">
+    <link rel='stylesheet' href='https:////netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'>
 </head>
 
 <body>
@@ -232,7 +232,7 @@
                         "Forever Love"
                     </div>
                     <br>Together shall we live<br>
-                    walking hands in hands<br>
+                    walking hand in hand<br>
                     through the storm and wind<br>
                     and across all hurdles<br>
                     shall we pass, with a smile<br>
@@ -317,6 +317,7 @@
             }
         });
     });
+
 </script>
 
 
@@ -366,6 +367,7 @@
     const composeN = (...fns) => (...args) =>
         fns.reverse().
     reduce((x, f) => f.apply(f, [].concat(x)), args);
+
 </script>
 
 <script>
