--- a/index.html
+++ b/index.html
@@ -275,11 +275,11 @@
             © 2020 Ayush Karn. All rights reserved.
         </div>
         <div class="social_media" data-aos="fade-up">
-            <a href="https://www.github.com/ayush2599"><i class="fab fa-github m-3"></i></a>
-            <a href="https://www.linkedin/ayush-karn25"><i class="fab fa-linkedin m-3"></i></a>
-            <a href="https://www.instagram.com/ayush_diaries"><i class="fab fa-instagram m-3"></i></a>
-            <a href="https://www.facebook.com/ayush.karn25"><i class="fab fa-facebook m-3"></i></a>
-            <a href="https://www.twitter.com/ayush_karn25"><i class="fab fa-twitter m-3"></i></a>
+            <a href="https://www.github.com/ayush2599"><i class="fa fa-github m-3"></i></a>
+            <a href="https://www.linkedin/ayush-karn25"><i class="fa fa-linkedin m-3"></i></a>
+            <a href="https://www.instagram.com/ayush_diaries"><i class="fa fa-instagram m-3"></i></a>
+            <a href="https://www.facebook.com/ayush.karn25"><i class="fa fa-facebook m-3"></i></a>
+            <a href="https://www.twitter.com/ayush_karn25"><i class="fa fa-twitter m-3"></i></a>
         </div>
     </div>
 </body>
