--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>
         Ayush Karn
     </title>
+    <link rel="icon" href="images/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -39,11 +40,11 @@
         </div>
 
         <ul class="menu-list">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Resume</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Artworks</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="artworks.html">Artworks</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
 
         <div class="menu">
@@ -62,7 +63,7 @@
         <div class="intro_content">
             <div class="intro_content__container">
                 <p class="intro_content__container__text">
-                    I&nbsp;&nbsp; AM <span id="spin"></span>
+                    I&nbsp;&nbsp; AM <span id="changing_data"></span><span id="cursor"></span>
                 </p>
             </div>
         </div>
@@ -72,7 +73,7 @@
         <img class="ayush_img" src="images/ayush.png">
     </div>
 
-    <div class="container" style="height: 500px;background-color:#e6e2dc; ">
+    <div class="container" style="height: 500px;  background: linear-gradient(to bottom, #005aa7, #fffde4);">
         <div class="line-outer" data-aos="fade-up">
             <div class="line-inner" style="top: 60%;"></div>
         </div>
@@ -130,7 +131,7 @@
             <div class="circle">
                 <div class="circle__inner">
                     <div class="circle__wrapper">
-                        <div class="circle__content">Web Dev</div>
+                        <div class="circle__content">Full Stack Web Dev</div>
                     </div>
                 </div>
             </div>
@@ -202,7 +203,7 @@
             </div>
         </div>
         <div class="get-in-touch-2" data-aos="fade-up">
-            <a class="get-in-touch-2-btn" href="#"> See more...</a>
+            <a class="get-in-touch-2-btn" href="projects.html"> Check out all my projects...</a>
         </div>
     </div>
     <div class="container" data-aos="fade-up" style="background-color: #e6e2dc;width: 80%;margin:60px auto; border-radius: 30px">
@@ -264,9 +265,9 @@
         </div>
         <div class="footer-menu" data-aos="fade-up">
             <ul class="footer-list">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Resume</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="#">Artworks</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
