--- a/index.html
+++ b/index.html
@@ -10,9 +10,258 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@200;300;400;500;600;700;800;900&family=Varela&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link rel='stylesheet' href='https://unpkg.com/aos@2.3.0/dist/aos.css'>
+    <!--    <link rel='stylesheet' href='https://unpkg.com/aos@2.3.0/dist/aos.css'>-->
     <link rel='stylesheet' href='https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'>
 </head>
+<style scoped>
+    .items-container-projects {
+        height: 720px;
+    }
+
+    .footer {
+        height: 400px;
+    }
+
+    @media only screen and (max-width: 760px) {
+
+        .nav,
+        .nav2 {
+            max-width: 100%;
+            padding: 0;
+        }
+
+        .wrapper {
+            font-size: 1.6em;
+        }
+
+        .ayush_img {
+            position: absolute;
+            top: 150px;
+            left: 0;
+            width: 200px;
+            margin: 0 auto;
+            right: 0;
+
+        }
+
+        .header {
+            height: 700px;
+            background-position: top center;
+            background-size: cover;
+        }
+
+        .intro_text {
+            position: absolute;
+            top: 450px;
+            margin: auto;
+            left: 0;
+            right: 0;
+            text-align: center;
+            font-size: 2.2em;
+        }
+
+        .intro_content {
+            top: 500px;
+            position: absolute;
+            margin: 0;
+            padding: 0;
+            left: 0;
+            right: 0;
+            z-index: 0;
+            -webkit-transform: translate(0%, 0%);
+            transform: translate(0%, 0%);
+        }
+
+        .intro_content__container {
+            padding: 0;
+            top: 500px;
+            font-size: 1.2em;
+            float: none;
+            height: 80px;
+            margin: 0;
+            width: 100%;
+            max-width: 100%;
+
+        }
+
+        .intro_content__container:before {
+            top: 0;
+            padding-top: 10px;
+            left: 60px;
+        }
+
+        .intro_content__container:after {
+            top: 0;
+            padding-top: 10px;
+            right: 60px;
+        }
+
+        .intro_content__container__text {
+            margin: 0;
+            text-align: center;
+            width: 100%;
+            padding-top: 20px;
+        }
+
+        .get-in-touch {
+            display: table;
+            text-align: center;
+            left: 0;
+            margin: auto;
+            top: 600px;
+            width: 100%;
+        }
+
+        .get-in-touch-btn {
+            box-shadow: 0 0 20px #000;
+            padding: 10 25 10 25;
+            font-size: 0.8em;
+            z-index: 20;
+        }
+
+        .quote {
+            max-height: 200px;
+            font-size: 0.7em;
+        }
+
+        .line-outer {
+            height: 50px;
+        }
+
+        .line-inner {
+            height: 20px;
+        }
+
+        .container .skills {
+            width: 100%;
+        }
+
+        hr.soften,
+        hr.soften.white {
+            width: 90%;
+        }
+
+        .container .content {
+            width: 90%;
+            text-align: justify;
+            padding-top: 20px;
+
+        }
+
+        .circle-container {
+            text-align: center;
+        }
+
+        .items-container {
+            width: 90%;
+            height: 900px;
+        }
+
+        .item {
+            margin: 50px 0;
+        }
+
+        .item .rounded img {
+            max-width: 350px;
+            max-height: 200px;
+        }
+
+
+
+        .item-img {
+            display: block;
+            padding: 20px;
+        }
+
+        .item-des {
+            display: block;
+            padding-left: 20px;
+        }
+
+        .more-width {
+            width: 100%;
+        }
+
+        .items-container-projects {
+            height: 1050px;
+        }
+
+        .get-in-touch-2 {
+            margin: auto;
+        }
+
+        .get-in-touch-2-btn {
+            padding: 20 25 20 25;
+            font-size: 0.8em;
+        }
+
+        html,
+        body {
+            width: 100%;
+            height: 100%;
+            position: relative;
+        }
+
+        .footer {
+            height: 700px;
+        }
+
+        .footer-menu li,
+        .footer-menu a {
+            display: block;
+            padding-top: 5px;
+        }
+
+        .footer .content {
+            margin: auto;
+            text-align: center;
+            margin-top: 10px;
+        }
+
+        .menu-list {
+            top: 40px;
+        }
+
+        .full-width {
+            height: 200px;
+            line-height: 200px;
+            background-size: cover;
+            background-position: center;
+        }
+
+        .artwork {
+            height: 1600px;
+            margin: 20px auto;
+            width: 100%;
+        }
+
+        .artwork .item-img {
+            display: table;
+            padding: 20px;
+            margin: auto;
+        }
+
+        .artwork .item-des {
+            display: block;
+            text-align: justify;
+            padding: 20px;
+        }
+
+        .artwork .item {
+            margin: 50px auto;
+        }
+
+        .artwork .items-container {
+            height: 1300px;
+        }
+
+        .artwork .item .rounded img {
+            width: 300px;
+            max-height: 190px;
+        }
+    }
+
+</style>
 
 <body>
     <div class="nav" id="mynav">
@@ -57,6 +306,7 @@
     </div>
 
     <div class="header">
+        <img class="ayush_img" src="images/ayush.png">
         <div class="intro_text">
             Hello. Namaste. This is AYUSH KARN !
         </div>
@@ -68,12 +318,12 @@
             </div>
         </div>
         <div class="get-in-touch">
-            <a class="get-in-touch-btn" href="#"> Get in touch</a>
+            <a class="get-in-touch-btn" href="contact.html"> Get in touch</a>
         </div>
-        <img class="ayush_img" src="images/ayush.png">
+
     </div>
 
-    <div class="container" style="height: 500px;  background: linear-gradient(to bottom, #005aa7, #fffde4);">
+    <div class="container quote" style="height: 500px;  background: linear-gradient(to bottom, #005aa7, #fffde4);">
         <div class="line-outer" data-aos="fade-up">
             <div class="line-inner" style="top: 60%;"></div>
         </div>
@@ -174,7 +424,7 @@
             My Previous Works
             <hr class="soften" />
         </div>
-        <div class="items-container more-width" style="height: 720px;">
+        <div class="items-container items-container-projects more-width" style="">
             <div class="item no-bg more-width" data-aos="fade-up">
                 <div class="item-img rounded">
                     <img src="images/Nepali_corpus2.png">
@@ -206,7 +456,7 @@
             <a class="get-in-touch-2-btn" href="projects.html"> Check out all my projects...</a>
         </div>
     </div>
-    <div class="container" data-aos="fade-up" style="background-color: #e6e2dc;width: 80%;margin:60px auto; border-radius: 30px">
+    <div class="container" data-aos="fade-up" style="background-color: #e6e2dc;width: 80%;margin:20px auto; border-radius: 30px">
         <div class="container-title" data-aos="fade-up">
             Lets create something Amazing Together
             <hr class="soften" />
@@ -219,7 +469,7 @@
             <a class="get-in-touch-2-btn" href="#"> Get in touch</a>
         </div>
     </div>
-    <div class="container" data-aos="fade-up">
+    <div class="container artwork" data-aos="fade-up">
         <div class="container-title full-width" data-aos="fade-up">
             Arts by Ayush
         </div>
@@ -228,7 +478,7 @@
                 <div class="item-img">
                     <img src="images/Hands.jpg">
                 </div>
-                <div class="item-des" style="text-align: left;">
+                <div class="item-des" style="">
                     <div class="desc-title" style="text-align: center;">
                         "Forever Love"
                     </div>
@@ -255,25 +505,27 @@
             </div>
         </div>
         <div class="get-in-touch-2" data-aos="fade-up">
-            <a class="get-in-touch-2-btn" href="#">See More...</a>
+            <a class="get-in-touch-2-btn" href="artworks.html">See More...</a>
         </div>
     </div>
-    <div class="container footer" data-aos="fade-up" style="background-color: rgb(18, 22, 72); color: #fff;height: 400px;">
+    <div class="container footer" data-aos="fade-up" style="background-color: rgb(18, 22, 72); color: #fff;">
         <div class="container-title" data-aos="fade-up" style="color: #fff;">
             LET ME CREATE WHAT YOU NEED.
             <hr class="soften white" />
         </div>
+
         <div class="footer-menu" data-aos="fade-up">
             <ul class="footer-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="resume.html">Resume</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="#">Artworks</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="artworks.html">Artworks</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
+
         <div class="content" data-aos="fade-up" style="margin-top: 20px;font-size: 0.8em; ">
-            © 2020 Ayush Karn. All rights reserved.
+            &copy; 2020 Ayush Karn. All rights reserved.
         </div>
         <div class="social_media" data-aos="fade-up">
             <a href="https://www.github.com/ayush2599"><i class="fa fa-github m-3"></i></a>
