--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@200;300;400;500;600;700;800;900&family=Varela&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link rel='stylesheet' href='https://unpkg.com/aos@2.3.0/dist/aos.css'>
+    <!--    <link rel='stylesheet' href='https://unpkg.com/aos@2.3.0/dist/aos.css'>-->
     <link rel='stylesheet' href='https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfobject/2.1.1/pdfobject.js"></script>
 </head>
@@ -18,6 +18,55 @@
     .pdfobject-container {
         height: 60rem;
         border: 1rem solid rgba(0, 0, 0, .1);
+    }
+
+    @media only screen and (max-width: 760px) {
+
+        .nav,
+        .nav2 {
+            max-width: 100%;
+            padding: 0;
+        }
+
+        .wrapper {
+            font-size: 1.6em;
+        }
+
+        hr.soften,
+        hr.soften.white {
+            width: 90%;
+        }
+
+        .container .content {
+            width: 90%;
+            text-align: justify;
+            padding-top: 20px;
+
+        }
+
+        .footer {
+            height: 700px;
+        }
+
+        .footer-menu li,
+        .footer-menu a {
+            display: block;
+            padding-top: 5px;
+        }
+
+        .footer .content {
+            margin: auto;
+            text-align: center;
+            margin-top: 10px;
+        }
+
+        .more-width {
+            width: 100%;
+        }
+
+        .menu-list {
+            top: 40px;
+        }
     }
 
 </style>
@@ -74,7 +123,7 @@
         </div>
     </div>
 
-    <div class="container footer" data-aos="fade-up" style="background-color: rgb(18, 22, 72); color: #fff;height: 400px;">
+    <div class="container footer" data-aos="fade-up" style="background-color: rgb(18, 22, 72); color: #fff;">
         <div class="container-title" data-aos="fade-up" style="color: #fff;">
             LET ME CREATE WHAT YOU NEED.
             <hr class="soften white" />
@@ -89,7 +138,7 @@
             </ul>
         </div>
         <div class="content" data-aos="fade-up" style="margin-top: 20px;font-size: 0.8em; ">
-            © 2020 Ayush Karn. All rights reserved.
+            &copy; 2020 Ayush Karn. All rights reserved.
         </div>
         <div class="social_media" data-aos="fade-up">
             <a href="https://www.github.com/ayush2599"><i class="fa fa-github m-3"></i></a>
