--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@200;300;400;500;600;700;800;900&family=Varela&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-        <link rel='stylesheet' href='https://unpkg.com/aos@2.3.0/dist/aos.css'>
+    <link rel='stylesheet' href='https://unpkg.com/aos@2.3.0/dist/aos.css'>
     <link rel='stylesheet' href='https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'>
 </head>
 <style scoped>
@@ -324,7 +324,7 @@
     </div>
 
     <div class="container quote" style="height: 500px;  background: linear-gradient(to bottom, #005aa7, #fffde4);">
-        <div class="line-outer" data-aos="fade-up">
+        <div class="line-outer">
             <div class="line-inner" style="top: 60%;"></div>
         </div>
         <p style="text-align: center;
