--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@200;300;400;500;600;700;800;900&family=Varela&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link rel='stylesheet' href='https://unpkg.com/aos@2.3.0/dist/aos.css'>
+    <link rel='stylesheet' href='https://unpkg.com/aos@2.3.0/dist/aos.css' id="aos-style">
     <link rel='stylesheet' href='https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'>
 </head>
 <style scoped>
@@ -666,6 +666,14 @@
         // start the text animation
         StartTextAnimation(0);
     });
+
+</script>
+
+<script>
+    var width = screen.width;
+    if (width <= 760) {
+        document.getElementById("aos-style").disabled = true;
+    }
 
 </script>
 <script src='https://code.jquery.com/jquery-1.11.2.min.js'></script>
