--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@200;300;400;500;600;700;800;900&family=Varela&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link rel='stylesheet' href='https://unpkg.com/aos@2.3.0/dist/aos.css' id="aos-style">
+    <link rel="stylesheet" href="aos.css">
     <link rel='stylesheet' href='https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'>
 </head>
 <style scoped>
@@ -377,36 +377,36 @@
             What I Do
             <hr class="soften" />
         </div>
-        <div class="circle-container" data-aos="fade-left">
-            <div class="circle">
+        <div class="circle-container">
+            <div class="circle" data-aos="zoom-in-up">
                 <div class="circle__inner">
                     <div class="circle__wrapper">
                         <div class="circle__content">Full Stack Web Dev</div>
                     </div>
                 </div>
             </div>
-            <div class="circle">
+            <div class="circle" data-aos="zoom-in-up">
                 <div class="circle__inner">
                     <div class="circle__wrapper">
                         <div class="circle__content">UI/UX</div>
                     </div>
                 </div>
             </div>
-            <div class="circle">
+            <div class="circle" data-aos="zoom-in-up">
                 <div class="circle__inner">
                     <div class="circle__wrapper">
                         <div class="circle__content">App Dev</div>
                     </div>
                 </div>
             </div>
-            <div class="circle">
+            <div class="circle" data-aos="zoom-in-up">
                 <div class="circle__inner">
                     <div class="circle__wrapper">
                         <div class="circle__content">Software Dev</div>
                     </div>
                 </div>
             </div>
-            <div class="circle">
+            <div class="circle" data-aos="zoom-in-up">
                 <div class="circle__inner">
                     <div class="circle__wrapper">
                         <div class="circle__content">Realism Sketch</div>
@@ -669,13 +669,6 @@
 
 </script>
 
-<script>
-    var width = screen.width;
-    if (width <= 760) {
-        document.getElementById("aos-style").disabled = true;
-    }
-
-</script>
 <script src='https://code.jquery.com/jquery-1.11.2.min.js'></script>
 <script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
 <script src='https://unpkg.com/aos@2.3.0/dist/aos.js'></script>
